Closed
Bug 32485
Opened 25 years ago
Closed 25 years ago
Exiting Profile Manager causes a crash
Categories
(SeaMonkey :: Startup & Profiles, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: djakobse, Assigned: jband_mozilla)
References
Details
Attachments
(1 file)
|
9.84 KB,
patch
|
Details | Diff | Splinter Review |
Exiting Profile Manager causes a crash
Comment 1•25 years ago
|
||
Reassigning to selmer.
The crash happens when you click the "Exit" button on profile selector/manager.
This is a recent regression, was working last week.
Assignee: ben → selmer
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•25 years ago
|
||
what build? I am not seeing on 3/20 builds-beta or trunk
Comment 3•25 years ago
|
||
Bhuvan, see if we have a reproducible case somewhere. A stack trace would be
helpful :-) Steve
Assignee: selmer → racham
I see it on 3-20-2000 build. Here is the stack.
nsXPConnect::GetArbitraryScriptable() line 135 + 10 bytes
nsXPCWrappedNativeClass::GetArbitraryScriptable() line 820 + 25 bytes
nsXPCWrappedNative::GetArbitraryScriptable() line 1000 + 22 bytes
nsXPCWrappedNative::JSObjectFinalized(JSContext * 0x01450e90, JSObject *
0x012e05e8) line 89 + 25 bytes
WrappedNative_Finalize(JSContext * 0x01450e90, JSObject * 0x012e05e8) line 679
js_FinalizeObject(JSContext * 0x01450e90, JSObject * 0x012e05e8) line 1470 + 114
bytes
js_GC(JSContext * 0x01450e90) line 898 + 11 bytes
js_ForceGC(JSContext * 0x01450e90) line 678 + 9 bytes
js_DestroyContext(JSContext * 0x01450e90, int 2) line 183 + 9 bytes
JS_DestroyContext(JSContext * 0x01450e90) line 794 + 11 bytes
PREF_CleanupPrefs() line 562 + 13 bytes
PREF_Cleanup() line 547
nsPref::ShutDown(nsPref * const 0x01425d40) line 326
nsPref::~nsPref() line 175
nsPref::`scalar deleting destructor'(unsigned int 1) + 15 bytes
nsPref::Release(nsPref * const 0x01425d40) line 256 + 135 bytes
nsScriptSecurityManager::~nsScriptSecurityManager() line 1096 + 27 bytes
nsScriptSecurityManager::`scalar deleting destructor'(unsigned int 1) + 15 bytes
nsScriptSecurityManager::Release(nsScriptSecurityManager * const 0x020fe3a0)
line 342 + 154 bytes
nsJSUtils::nsClearCachedSecurityManager() line 695 + 17 bytes
nsJSEnvironment::~nsJSEnvironment() line 895
nsJSEnvironment::`scalar deleting destructor'(unsigned int 1) + 15 bytes
JSEnvironmentInit::~JSEnvironmentInit() line 843 + 30 bytes
$E6() + 13 bytes
_CRT_INIT(void * 0x00490000, unsigned long 0, void * 0x00000001) line 236
_DllMainCRTStartup(void * 0x00490000, unsigned long 0, void * 0x00000001) line
289 + 17 bytes
NTDLL! 77f69c6c()
KERNEL32! 77f198f5()
doexit(int 1, int 0, int 0) line 392
exit(int 1) line 279 + 13 bytes
mainCRTStartup() line 345
KERNEL32! 77f1b304()
Reassigning to norris, as it looks like scome script destruction isuues are
involved.
Norris, If you see a clear owner for this bug, please reassign to that person.
Otherwise, We need to track the actual owner. As such no changes have been made
to profile manager code.
Adding jband and neeti to the cc list as I see prefs and XPConnect references in
the stack trace. Adding Ben, in case he made any changes on the front end that
could cause this.
Assignee: racham → norris
| Assignee | ||
Comment 6•25 years ago
|
||
I'll take this one. It is crashing because a finalization call is going through
xpconnect when xpconnect has already been shutdown. xpconnect should deal with
that better.
There is a bigger problem of shutdown order and the problems that can happen as
components call other components (directly and indirectly) during shutdown. We
need a clearer strategy for dealing with this kind of stuff.
Assignee: norris → jband
| Assignee | ||
Comment 8•25 years ago
|
||
| Assignee | ||
Comment 9•25 years ago
|
||
fix checked in.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•