fix for bug 32485. Mark wrappednatives when xpconnect shuts down to avoid bad things happening when JS collects the JSObject part of the wrapper. r=mccabe